build/errors/testdata/parameter-count.q
main() {
	sum(42)
}

sum(a Int, b Int) -> Int {
	return a + b
}
